<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Serviteca</string>
    <string name="Nombre">Nombre:</string>
    <string name="Cedula">Cedula:</string>
    <string name="codigo">CODIGO</string>
    <string name="servicio">SERVICIO</string>
    <string name="cantidad">Cantidad</string>
    <string name="Can">CANTIDAD</string>
    <string name="unidad">UNIDAD</string>
    <string name="precio">PRECIO</string>
    <string name="todo">TODO</string>
    <string name="total">TOTAL</string>
    <string name="Carrito">Acceso a registro de vehiculo</string>
    <string name="_0">0</string>
    <string name="iva">IVA</string>
    <string name="guardar">Guardar</string>
    <string name="menu">MENU</string>
    <string name="buscar_placa">Buscar placa</string>
    <string name="placa">Placa</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion:</string>
    <string name="celular">Celular:</string>
    <string name="email">Email:</string>
    <string name="modelo">Modelo</string>
    <string name="fotovehiculo">Fotovehiculo</string>
    <string name="editar">Editar</string>
    <string name="color">Color</string>
    <string name="borrar_pantalla">Borrar pantalla</string>
    <string name="logo_app">Logo de la app</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario:</string>
    <string name="logo">logo</string>
    <string name="registrar_vehiculo">Registrar vehiculo</string>
    <string name="orden_de_compra">Orden de compra</string>
    <string name="salir">SALIR</string>
    <string name="logout">LOGOUT</string>
    <string name="modificar">EDITAR</string>
    <string name="estado">E</string>
    <string name="syncro">S</string>
    <string name="ver">VER</string>
    <string name="detalles_de_compra">Detalles de compra</string>
    <string name="nuevo">Nuevo</string>
    <string name="No">N°</string>
    <string name="sing_in">Sign In</string>
    <string name="remenber_me">Remenber me</string>
    <string name="pla">PLACA</string>
    <string name="valor">VALOR</string>
    <string name="config">Configuraciones</string>
    <string name="photo">foto del vehiculo</string>
    <string name="Norden">Orden</string>
    <string name="Fac">Factr</string>
    <string name="Fecha">Fecha</string>
    <string name="puntos">:</string>
    <string name="orden_">Orden:</string>
    <string name="servicio_">Servicio:</string>
    <string name="cliente_">Cliente:</string>
    <string name="cantidad_">Cantidad:</string>
    <string name="vr_unitario_">Vr Unitario:</string>
    <string name="vr_total_">Vr Total:</string>
    <string name="placa_">Placa:</string>
    <string name="marca_">Marca:</string>
    <string name="fecha_">Fecha:</string>
    <string name="tecnico_">Tecnico:</string>
    <string name="factura_">Factura:</string>
    <string name="iva_">Iva:</string>
    <string name="subtal">SubTotal:</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="crear">Crear</string>
    <string name="borrar">Eliminar</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="base_de_datos">Servidor</string>
    <string name="n_tecnico">Nuevo Tecnico</string>
    <string name="n_servicio">Nuevo Servicio</string>
    <string name="consecutivo">No. Consecutivo Orden</string>
    <string name="codigo_">Codigo:</string>
    <string name="valor_">Valor:</string>
    <string name="comision">Comision:</string>
    <string name="atras">Atras</string>
    <string name="addt">Gestion Tecnico</string>
    <string name="adds">Gestion Servicio</string>
    <string name="vehiculo">VEHICULO</string>
    <string name="servicios">SERVICIOS</string>
    <string name="detalles">DETALLES</string>
    <string name="configurar">CONFIGURAR</string>
    <string name="usuarios">USUARIOS</string>
    <string name="tecnicos">TECNICOS</string>
    <string name="buscar">BUSCAR</string>
    <string name="namespace">Namespace</string>
    <string name="url">Url</string>
    <string name="error_sd_card_not_mounted">Externer Speicher wird vorausgesetzt. Vermutlich ist deine SD Karte derzeit nicht verfügbar.</string>
    <string name="error_could_not_take_photo">Es ist ein Problem mit der Kamera aufgetreten. Diese Unannehmlichkeit tut uns sehr leid!</string>
    <string name="activity_take_photo_start_camera_button">Foto schießen!</string>
    <string name="title_activity_estacion">Estacion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addmarca">Agregar Marca de Vehiculo</string>
    <string name="copy">Copyright © by MobilSoft SAS.</string>
</resources>