<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="20dp" >
    
     <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2"
        android:id="@+id/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/lineas"
        android:orientation="vertical"
        android:padding="20dp" 
        android:layout_below="@id/img"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_tecnico"
            android:textSize="40sp"
            android:textStyle="bold" />
        
        <ImageView 
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tecnico_"
            android:id="@+id/foto"
            android:src="@drawable/casco"/>

        <AutoCompleteTextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/Nombre"
            android:inputType="text"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/Cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/dir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/celular"
            android:inputType="phone" />
        
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" 
            android:weightSum="3">

            <Button
                android:id="@+id/eliminar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar" 
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/editar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar" 
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"/>

            <Button
                android:id="@+id/guardar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_weight="1" 
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/menu"
        style="@style/MultiGradient"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/atras" 
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>