<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="20dp" >
    
     <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/lineas"
        android:orientation="vertical"
        android:padding="20dp" 
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_servicio"
            android:textSize="40sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/servicio_"
            android:inputType="text"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/codigo_"
            android:inputType="number" />

        <EditText
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/valor_"
            android:inputType="text" />

        <EditText
            android:id="@+id/iva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/iva_"
            android:inputType="phone" />
        
        <EditText
            android:id="@+id/comi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/comision"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" 
            android:weightSum="3">

            <Button
                android:id="@+id/eliminar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar" 
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/editar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar" 
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"/>

            <Button
                android:id="@+id/guardar"
                style="@style/MultiGradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_weight="1" 
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/menu"
        style="@style/MultiGradient"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/atras" 
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp" />

</RelativeLayout>