<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp1"
    android:orientation="vertical"
    android:padding="20dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logolubriwash" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="150dp" >

        <TableRow
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <Button
                android:id="@+id/vehiculo"
                style="@style/butonimgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/registrar_vehiculo"
                android:drawableTop="@drawable/auto"
                android:text="@string/vehiculo"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/compras"
                style="@style/butonimgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/orden_de_compra"
                android:drawableTop="@drawable/cartvacio"
                android:text="@string/servicios"
                android:textSize="20sp"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_marginTop="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <Button
                android:id="@+id/det"
                style="@style/butonimgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/detalles_de_compra"
                android:drawableTop="@drawable/ver"
                android:text="@string/detalles"
                android:textSize="20sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/salir"
                style="@style/butonimgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/config"
                android:drawableTop="@drawable/logout"
                android:text="@string/logout"
                android:textSize="20sp"
                android:typeface="sans" />
        </TableRow>
    </TableLayout>
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:onClick="Click_Url">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/copy"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>