<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_usuario"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <AutoCompleteTextView
            android:id="@+id/nuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/Nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/Cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/dir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/celular"
            android:inputType="number" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_select" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageButton
                android:id="@+id/foto"
                android:layout_width="600dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:background="@drawable/fotoimg"
                android:contentDescription="@string/fotovehiculo"
                android:src="@drawable/ic_launcherg"
                android:padding="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="10dp" >

                <Button
                    android:id="@+id/crear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" 
                    style="@style/MultiGradient"/>

                <Button
                    android:id="@+id/editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/editar"
                    style="@style/MultiGradient" />

                <Button
                    android:id="@+id/eliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/borrar" 
                    style="@style/MultiGradient"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/atras"
        android:drawableLeft="@drawable/menorque"
        android:drawableStart="@drawable/menorque"
        android:text="@string/menu"
        android:textColor="#FFFFFF" />

</LinearLayout>