<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/tecnicos"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/spinner_select"
        android:gravity="fill_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <Button
                android:id="@+id/d"
                style="@style/MultiGradient"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/desde" />

            <Button
                android:id="@+id/h"
                style="@style/MultiGradient"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hasta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <Button
                android:id="@+id/buscar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/imgbutton"
                android:contentDescription="@string/Fecha"
                android:drawableTop="@drawable/buscar"
                android:paddingTop="10dp"
                android:text="@string/buscar"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/ltab2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp" >
    </ListView>

</LinearLayout>